--- a/test-output/old/Suite B/classes.html
+++ b/test-output/old/Suite B/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.datafw.suitea.TestA</td>
+<td>com.datafw.suiteb.TestB</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
