--- a/test-output/old/Suite C/toc.html
+++ b/test-output/old/Suite C/toc.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>Results for Suite A</title>
+<title>Results for Suite C</title>
 <link href="../testng.css" rel="stylesheet" type="text/css" />
 <link href="../my-testng.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h3><p align="center">Results for<br/><em>Suite A</em></p></h3>
+<h3><p align="center">Results for<br/><em>Suite C</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
 <td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
@@ -20,10 +20,10 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>SuiteA (0/1/2)</td><td valign='top' align='right'>
-  <a href='SuiteA.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>SuiteC (0/0/1)</td><td valign='top' align='right'>
+  <a href='SuiteC.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
